--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
                             <div class="name-tag">
                                 <a>Sihyun Seo</a> 
                             </div>
+                            <div class="info-tag">
+                                <div>
+                                    <a>CHEONGJU UNIV</a>
+                                    <br/>
+                                    <a>Division of Software Converge</a>
+                                    <br/>
+                                    <a>Major G.P.A : 4.24/4.5</a>
+                                </div>
+                                <hr />
+                                <div>
+                                    <a>sihyun_s@kakao.com</a>
+                                    <br/>
+                                    <a href="https://github.com/SihyunSeo">
+                                        <img alt="" src="/assets/image/github-mark.png" class="" height="80" width="80"> 
+                                        https://github.com/SihyunSeo
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-8">
