--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="mini-article-meta">
                     <div class="mini-article-byline">
                         <div class="author-name-area">
-                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="80" width="80"> 
+                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="auto" width="100%" style="border-radius: unset;">
                         </div>
                     </div>
                     <div class="tags">
@@ -136,7 +136,7 @@
                 <div class="mini-article-meta">
                     <div class="mini-article-byline">
                         <div class="author-name-area">
-                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="80" width="80"> 
+                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="auto" width="100%" style="border-radius: unset;">
                         </div>
                     </div>
                     <div class="tags">
@@ -162,7 +162,7 @@
                 <div class="mini-article-meta">
                     <div class="mini-article-byline">
                         <div class="author-name-area">
-                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="80" width="80"> 
+                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="auto" width="100%" style="border-radius: unset;">
                         </div>
                     </div>
                     <div class="tags">
@@ -188,7 +188,7 @@
                 <div class="mini-article-meta">
                     <div class="mini-article-byline">
                         <div class="author-name-area">
-                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="80" width="80"> 
+                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="auto" width="100%" style="border-radius: unset;">
                         </div>
                     </div>
                     <div class="tags">
@@ -214,7 +214,7 @@
                 <div class="mini-article-meta">
                     <div class="mini-article-byline">
                         <div class="author-name-area">
-                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="80" width="80"> 
+                            <img alt="" src="/assets/image/aidang_login.png" class="profile" height="auto" width="100%" style="border-radius: unset;">
                         </div>
                     </div>
                     <div class="tags">
