personal_info complete
personal_info complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="info-tag">
                                 <div class="univ-section">
-                                    <a>UNIV</a>
+                                    <a>Cheongju UNIV</a>
                                     <br/>
                                     <a>Division of Software Converge</a>
                                     <br/>
@@ -56,16 +56,44 @@
                         </div>
                     </div>
 
-                    <!-- Career -->
-                    <div class="flex-1.5 ps-20">
-                        <legend style="color:white;font-weight:bold;font-size:2rem;">Info</legend>
-                        <div class="award-wrap p-20 lh-25 mt-20">
-                            ○&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate research students (researcher, 2020.03 ~ 2022.02)
+                    <div class="flex-1.5 p-10">
+                        <!-- Career -->
+                        <div class="ps-20 pb-20">
+                            <legend style="color:white;font-weight:bold;font-size:2rem;">Info</legend>
+                            <div class="award-wrap p-20 lh-25 mt-20">
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate research students (researcher, Mar 2020 ~ Feb 2022)
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Start-up club "SHARP" activity (club members, Mar 2020 ~ Feb 2022)
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Patent Application(A Device and Method for Diagnosing Crop Pests through Deep Learning, Oct 2021)
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Winter interns, Corp.NES (interns, Dec 2021 ~ Feb 2022)
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Korea Univ Intelligence Information SW Academy 2nd Certificated(Mar 2023 ~ Jun 2023)
+                                <br/>
+                            </div>
+                        </div>
+
+                        <!-- Project -->
+                        <div class="ps-20 pb-20 pt-5">
+                            <legend style="color:white;font-weight:bold;font-size:2rem;">Project</legend>
+                            <div class="award-wrap p-20 lh-25 mt-20">
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Textualization of Video : Tracking Object with Caption
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Diet Supporting Service for Diabetes Patients through Deep Learning Image Analysis
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Half Lambda Company Introduction and Contact Page
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;Application for Securing Parking Spaces by Sharing Parking Spaces in Private Land
+                                <br/>
+                                ○&nbsp;&nbsp;&nbsp;&nbsp;AI Crop Disease Diagnosis and Agricultural Population Supporting Community Application
+                                <br/>
+                            </div>
                         </div>
                     </div>
 
                     <!-- Awards -->
-                    <div class="flex-2 ps-20">
+                    <div class="flex-2 p-10">
                         <legend style="color:white;font-weight:bold;font-size:2rem;">General Information</legend>
                         <div class="award-wrap p-20 lh-25 mt-20">
                             ○&nbsp;&nbsp;&nbsp;&nbsp;Participation prize, 2023 Chungcheongbuk-do Public Data Startup Competition
@@ -98,6 +126,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Project explanation -->
         <div class="mini-card-grid">
             <article class="mini-card module module-article article" id="mini-post-291626">
                 <header class="mini-article-card-header">
@@ -109,7 +139,7 @@
                         </div>
                         <h2 class="">
                             <a href="#" class="article-card-header read-article">
-                                Debeloping Textualization of Video : Tracking Object with Caption
+                                Textualization of Video : Tracking Object with Caption
                             </a>
                         </h2>
                     </div>
@@ -135,7 +165,7 @@
                         </div>
                         <h2 class="">
                             <a href="#" class="article-card-header read-article">
-                                Developing Diet Supporting Service for Diabetes Patients through Deep Learning Image Analysis
+                                Diet Supporting Service for Diabetes Patients through Deep Learning Image Analysis
                             </a>
                         </h2>
                     </div>
@@ -161,7 +191,7 @@
                         </div>
                         <h2 class="">
                             <a href="#" class="article-card-header read-article">
-                                Developing Diet Supporting Service for Diabetes Patients through Deep Learning Image Analysis
+                                Half Lambda Company Introduction and Contact Page
                             </a>
                         </h2>
                     </div>
@@ -187,7 +217,7 @@
                         </div>
                         <h2 class="">
                             <a href="#" class="article-card-header read-article">
-                                Developing Diet Supporting Service for Diabetes Patients through Deep Learning Image Analysis
+                                Application for Securing Parking Spaces by Sharing Parking Spaces in Private Land
                             </a>
                         </h2>
                     </div>
@@ -213,7 +243,7 @@
                         </div>
                         <h2 class="">
                             <a href="#" class="article-card-header read-article">
-                                Developing Diet Supporting Service for Diabetes Patients through Deep Learning Image Analysis
+                                AI Crop Disease Diagnosis and Agricultural Population Supporting Community Application
                             </a>
                         </h2>
                     </div>
