--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <div class="profile-section">
                             <div class="name-section">
                                 <a class="profile-img">
-                                    <img alt="" src="/assets/image/7.jpg" class="profile" height="80" width="80"> 
+                                    <img alt="" src="/assets/image/7.png" class="profile" height="80" width="80"> 
                                     <!-- <img alt="" src="/assets/image/white.jpeg" class="profile" height="80" width="80">  -->
                                 </a>
                                 <div class="name-tag">
