--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                     <br/>
                                     <a>Division of Software Converge</a>
                                     <br/>
-                                    <a>Major G.P.A : 4.24/4.5</a>
+                                    <a>GPA : 3.92/4.5</a>
                                 </div>
                                 <hr />
                                 <div class="col-12 row pt-10">
