--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
                             <br/>
                             ○&nbsp;&nbsp;&nbsp;&nbsp;Grand prize, 2022 Chungbuk ICT Performance Presentation
                             <br/>
-                            ○&nbsp;&nbsp;&nbsp;&nbsp;Grand prize, Artificial Intelligence Software Major Performance Presentation, Cheongju Univ
-                            <br/>
+                            <!-- ○&nbsp;&nbsp;&nbsp;&nbsp;Grand prize, Artificial Intelligence Software Major Performance Presentation, Cheongju Univ
+                            <br/> -->
                             ○&nbsp;&nbsp;&nbsp;&nbsp;Grand prize, 2022 Chungcheongbuk-do Public Data Startup Competition
                             <br/>
-                            ○&nbsp;&nbsp;&nbsp;&nbsp;Excellence prize, 10th Prototype Performance Exhibition, Cheongju Univ
-                            <br/>
-                            ○&nbsp;&nbsp;&nbsp;&nbsp;Excellence prize, Realistic Content XR Capstone Design Competition
-                            <br/>
+                            <!-- ○&nbsp;&nbsp;&nbsp;&nbsp;Excellence prize, 10th Prototype Performance Exhibition, Cheongju Univ
+                            <br/> -->
+                            <!-- ○&nbsp;&nbsp;&nbsp;&nbsp;Excellence prize, Realistic Content XR Capstone Design Competition
+                            <br/> -->
                             ○&nbsp;&nbsp;&nbsp;&nbsp;Participation prize, 9th K-Hackathon Competition
                             <br/>
                             ○&nbsp;&nbsp;&nbsp;&nbsp;Excellence prize, 2021 Chungcheongbuk-do Public Data Startup Competition
                             <br/>
-                            ○&nbsp;&nbsp;&nbsp;&nbsp;Participation prize, Adventure Design Competition, Cheongju Univ
+                            <!-- ○&nbsp;&nbsp;&nbsp;&nbsp;Participation prize, Adventure Design Competition, Cheongju Univ -->
                         </div>
                     </div>
                 </div>
